# fcitx5-hangul

./: CMakeLists.txt  Messages.sh  README.md  org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml.in  org.fcitx.fcitx5-hangul.metainfo.xml.in
.github/workflows/: check.yml
data/: CMakeLists.txt  symbol.txt
list/: CMakeLists.txt  gen_list.c
po/: CMakeLists.txt  ca.po  da.po  de.po  fcitx5-chewing.pot  fcitx5-hangul.pot  fr.po  he.po  ja.po  ka.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  engine.cpp  engine.h  hangul-addon.conf.in  hangul-addon.conf.in.in  hangul.conf.in
test/: CMakeLists.txt  testhangul.cpp
test/addon/: CMakeLists.txt
test/inputmethod/: CMakeLists.txt
